--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,16 @@
 /***** 
 COLOR CHEAT SHEET 
-
+https://coolors.co/palette/001219-005f73-0a9396-94d2bd-e9d8a6-ee9b00-ca6702-bb3e03-ae2012-9b2226
+001219- black
+005f73- dark teal
+0a9396- cyan
+94d2bd- light mint
+e9d8a6- vanilla
+ee9b00- orange
+ca6702- dark orange
+bb3e03- rust
+ae2012- light red
+9b2226- auburn
 
 *****/
 
@@ -9,9 +19,16 @@ COLOR CHEAT SHEET
 /******* FONTS ******/
 /********************/
 body, p {
-
+    font-family: "SUSE", system-ui;
 }
 
 h1, h2, h3, h4, h5, h6 {
+    font-family: "Fascinate Inline", system-ui;
+}
 
+/********************/
+/******* HERO ******/
+/********************/
+header.masthead{
+    background-image: url('../img/broadway.webp')
 }
