--- a/css/custom.css
+++ b/css/custom.css
@@ -32,3 +32,10 @@ h1, h2, h3, h4, h5, h6 {
 header.masthead{
     background-image: url('../img/broadway.webp')
 }
+
+/********************/
+/******* COLORS ******/
+/********************/
+.btn-primary{
+    
+}
