--- a/css/custom.css
+++ b/css/custom.css
@@ -85,3 +85,9 @@ hr.divider-light {
 #mainNav .navbar-nav .nav-item .nav-link.active {
     color: #005f73 !important;
 }
+
+@media (min-width: 992px) {
+    #mainNav.navbar-shrink .navbar-brand:hover {
+        color: #005f73;
+    }
+}
