--- a/css/custom.css
+++ b/css/custom.css
@@ -140,3 +140,15 @@ hr.divider-light {
 #services {
     padding-top: 190px;
 }
+
+.carousel-caption {
+    position: absolute;
+    right: 15%;
+    bottom: 1.25rem;
+    left: 15%;
+    padding-top: 1.25rem;
+    padding-bottom: 1.25rem;
+    color: #fff text;
+    text-align: center;
+    text-shadow: 1px 1px 4px #001219;
+}
